--- a/hr-eureka-server/src/main/resources/application.properties
+++ b/hr-eureka-server/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.application.name=hr-eureka-server
+server.port=8761
 
+eureka.client.register-with-eureka=false
+eureka.server.fetch-with-eureka=false
