--- a/hr-payroll/pom.xml
+++ b/hr-payroll/pom.xml
@@ -41,6 +41,12 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+        
+         <dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+		</dependency>
+        
     </dependencies>
 
     <dependencyManagement>
@@ -62,6 +68,14 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <resources>     
+        <resource>
+            <directory>src/main/resources</directory>
+            <includes>                      
+                <include>**/*.properties</include>                  
+            </includes>
+        </resource>            
+    </resources>
     </build>
 
 </project>
